# Deployment_Recommendation_Engine

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  user_info.json
.github/workflows/: google-cloudrun-docker.yml
application/: __init__.py
application/Model/: user_profiling.py
